[gd_scene load_steps=4 format=3 uid="uid://ykdmm74vx8s"]

[ext_resource type="Script" path="res://Assets/Scripts/StartScreenControl.gd" id="1_8rc2e"]
[ext_resource type="Texture2D" uid="uid://crmyesn866bba" path="res://Assets/Materials/StartScreenAssets/City.png" id="1_bu07y"]
[ext_resource type="FontFile" uid="uid://bmtr4hnwlwqdp" path="res://Assets/Materials/StartScreenAssets/BungeeFont/BungeeTint-Regular.ttf" id="2_xfyhq"]

[node name="PreGameScene" type="Node2D"]

[node name="ScreenControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_8rc2e")

[node name="Background" type="TextureRect" parent="ScreenControl"]
layout_mode = 0
offset_top = -2.0
offset_right = 1227.0
offset_bottom = 648.0
texture = ExtResource("1_bu07y")

[node name="GameStartButton" type="Button" parent="ScreenControl"]
layout_mode = 0
offset_left = 30.0
offset_top = 400.0
offset_right = 80.0
offset_bottom = 431.0
scale = Vector2(2.3017, 2.19952)
text = "Start!"

[node name="GameOptionsButton" type="Button" parent="ScreenControl"]
layout_mode = 0
offset_left = 30.0
offset_top = 493.0
offset_right = 100.0
offset_bottom = 524.0
scale = Vector2(2.06031, 1.84395)
text = "Settings
"

[node name="GameExitButton" type="Button" parent="ScreenControl"]
layout_mode = 0
offset_left = 25.0
offset_top = 573.0
offset_right = 62.0
offset_bottom = 604.0
scale = Vector2(2.37084, 1.86669)
text = "Exit"

[node name="Label" type="Label" parent="ScreenControl"]
layout_mode = 0
offset_left = 29.0
offset_top = 45.0
offset_right = 348.0
offset_bottom = 105.0
scale = Vector2(1.15674, 1.8462)
theme_override_fonts/font = ExtResource("2_xfyhq")
theme_override_font_sizes/font_size = 45
text = "Cryptid Zoo"

[connection signal="pressed" from="ScreenControl/GameStartButton" to="ScreenControl" method="_on_game_start_button_pressed"]
[connection signal="pressed" from="ScreenControl/GameOptionsButton" to="ScreenControl" method="_on_game_options_button_pressed"]
[connection signal="pressed" from="ScreenControl/GameExitButton" to="ScreenControl" method="_on_game_exit_button_pressed"]
